imagen clickeable + recalcular precio

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -93,19 +93,18 @@
                         <a class="addCart" data-id="1"><img src="/img/botines-de-futbol-puma-ultra.jpg" alt="botines-de-futbol-puma-ultra" /></a>
                         <h1 class="description">Botines Puma Ultra</h1>
                         <p class="price">$ <span class="prc">1000</span></p>
-                        <button class="button addCart" data-id="1">Añadir al Carrito <i class="material-icons add-cart">add_shopping_cart</i></button>
+                        <!--<button class="button addCart" data-id="1">Añadir al Carrito <i class="material-icons add-cart">add_shopping_cart</i></button>-->
                     </div>
                     <div class="card card-futbol">
-                        <img src="/img/pelota-de-argentina-adidas.jpg" alt="pelota-de-argentina-adidas" />
+                        <a class="addCart" data-id="2"><img src="/img/pelota-de-argentina-adidas.jpg" alt="pelota-de-argentina-adidas" /></a>
                         <h1 class="description">Pelota Adidas Argentina</h1>
                         <p class="price">$ <span class="prc">1000</span></p>
-                        <button class="button addCart" data-id="2">Añadir al Carrito <i class="material-icons add-cart">add_shopping_cart</i></button>
                     </div>
                     <div class="card card-futbol">
-                        <img src="/img/camiseta-de-argentina-adidas.jpg" alt="camiseta-de-argentina-adidas" />
+                        <a class="addCart" data-id="3"><img src="/img/camiseta-de-argentina-adidas.jpg" alt="camiseta-de-argentina-adidas" /></a>
                         <h1 class="description">Camiseta Seleccion Argentina</h1>
                         <p class="price">$ <span class="prc">1000</span></p>
-                        <button class="button addCart" data-id="3">Añadir al Carrito <i class="material-icons add-cart">add_shopping_cart</i></button>
+                        
                     </div>
                 </article>
             </section>
@@ -117,22 +116,19 @@
                 </div>
                 <article>
                     <div class="card card-basquet">
-                        <img src="/img/zapatilla-de-basquet.jpg" alt="zapatilla-de-basquet" />
+                        <a class="addCart" data-id="4"><img src="/img/zapatilla-de-basquet.jpg" alt="zapatilla-de-basquet" /></a>
                         <h1 class="description">Zapatilla de Basquet</h1>
                         <p class="price">$ <span class="prc">1000</span></p>
-                        <button class="button addCart" data-id="4">Añadir al Carrito <i class="material-icons add-cart">add_shopping_cart</i></button>
                     </div>
                     <div class="card card-basquet">
-                        <img src="/img/pelota-basquet.jpg" alt="pelota-basquet" />
+                        <a class="addCart" data-id="5"><img src="/img/pelota-basquet.jpg" alt="pelota-basquet" /></a>
                         <h1 class="description">Pelota de Basquet</h1>
                         <p class="price">$ <span class="prc">1000</span></p>
-                        <button class="button addCart" data-id="5">Añadir al Carrito <i class="material-icons add-cart">add_shopping_cart</i></button>
                     </div>
                     <div class="card card-basquet">
-                        <img src="/img/aro-de-basquet-profesional.jpg" alt="aro-de-basquet-profesional" />
+                        <a class="addCart" data-id="6"><img src="/img/aro-de-basquet-profesional.jpg" alt="aro-de-basquet-profesional" /></a>
                         <h1 class="description">Aro de Basquet profesional</h1>
                         <p class="price">$ <span class="prc">1000</span></p>
-                        <button class="button addCart" data-id="6">Añadir al Carrito <i class="material-icons add-cart">add_shopping_cart</i></button>
                     </div>
                 </article>
             </section>
@@ -145,22 +141,19 @@
 
                 <article>
                     <div class="card card-tenis">
-                        <img src="/img/muñequera-topper-tenis.jpg" alt="raqueta-padel" />
+                        <a class="addCart" data-id="7"><img src="/img/muñequera-topper-tenis.jpg" alt="raqueta-padel" /></a>
                         <h1 class="description">Muñequera Topper</h1>
                         <p class="price">$ <span class="prc">1000</span></p>
-                        <button class="button addCart" data-id="7">Añadir al Carrito <i class="material-icons add-cart">add_shopping_cart</i></button>
                     </div>
                     <div class="card card-tenis">
-                        <img src="/img/pelota-prince.jpg" alt="pelota-wilson" />
+                        <a class="addCart" data-id="8"><img src="/img/pelota-prince.jpg" alt="pelota-wilson" /></a>
                         <h1 class="description">Tubo de Pelota x3 Prince</h1>
                         <p class="price">$ <span class="prc">1000</span></p>
-                        <button class="button addCart" data-id="8">Añadir al Carrito <i class="material-icons add-cart">add_shopping_cart</i></button>
                     </div>
                     <div class="card card-tenis">
-                        <img src="/img/raqueta-tenis.jpg" alt="raqueta-tenis" />
+                        <a class="addCart" data-id="9"><img src="/img/raqueta-tenis.jpg" alt="raqueta-tenis" /></a>
                         <h1 class="description">Raqueta Wilson</h1>
                         <p class="price">$ <span class="prc">1000</span></p>
-                        <button class="button addCart" data-id="9">Añadir al Carrito <i class="material-icons add-cart">add_shopping_cart</i></button>
                     </div>
                 </article>
             </section>
@@ -172,22 +165,19 @@
                 </div>
                 <article>
                     <div class="card card-natacion">
-                        <img src="/img/antiparras-natacion.jpg" alt="antiparras-natacion" />
+                        <a class="addCart" data-id="10"><img src="/img/antiparras-natacion.jpg" alt="antiparras-natacion" /></a>
                         <h1 class="description">Antiparras Arena</h1>
                         <p class="price">$ <span class="prc">1000</span></p>
-                        <button class="button addCart" data-id="10">Añadir al Carrito <i class="material-icons add-cart">add_shopping_cart</i></button>
                     </div>
                     <div class="card card-natacion">
-                        <img src="/img/gorro-natacion.jpg" alt="gorro-natacion" />
+                        <a class="addCart" data-id="11"><img src="/img/gorro-natacion.jpg" alt="gorro-natacion" /></a>
                         <h1 class="description">Gorro Speedo</h1>
                         <p class="price">$ <span class="prc">1000</span></p>
-                        <button class="button addCart" data-id="11">Añadir al Carrito <i class="material-icons add-cart">add_shopping_cart</i></button>
                     </div>
                     <div class="card card-natacion">
-                        <img src="/img/patas-de-rana-natacion.jpg" alt="patas-natacion" />
+                        <a class="addCart" data-id="12"><img src="/img/patas-de-rana-natacion.jpg" alt="patas-natacion" /></a>
                         <h1 class="description">Patas de Rana Arena</h1>
                         <p class="price">$ <span class="prc">1000</span></p>
-                        <button class="button addCart" data-id="12">Añadir al Carrito <i class="material-icons add-cart">add_shopping_cart</i></button>
                     </div>
                 </article>
             </section>
